fix: 인증 받도록 수정